--- a/fullstackeletro/index.html
+++ b/fullstackeletro/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,4 +9,4 @@
     <h2>Seja bem Vindo(a)!</h2>
     <p>Aqui em nossa loja,<strong> <em>programadores tem desconto</em></strong> nos produtos para a sua casa!</p>
 </body>
-</html>
+</html>-->
