--- a/fullstackeletro/contato.html
+++ b/fullstackeletro/contato.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Stack Eletro</title>
+    <title>Contato - Full Stack Eletro</title>
 </head>
 <body>
-    <h2>Seja bem Vindo(a)!</h2>
-    <p>Aqui em nossa loja,<strong> programadores tem desconto</strong> nos produtos para a sua casa!</p>
+    <h2>Contato</h2>
     <a href="index.html">Página inicial</a>
     <a href="produtos.html">Produtos</a>
-    <a href="loja.html">Nossas Lojas</a>
+    <a href="loja.html">Nossas lojas</a>
     <a href="contato.html">Contato</a>
-    <h4>Formas de pagamento</h4>
+    <hr>
 </body>
 </html>
