--- a/fullstackeletro/produtos.html
+++ b/fullstackeletro/produtos.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h2>Produtos</h2>
+    <a href="index.html">Página inicial</a>
+    <a href="produtos.html">Produtos</a>
+    <a href="loja.html">Nossas Lojas</a>
+    <a href="contato.html">Contato</a>
     <hr>
 </body>
 </html>
