--- a/fullstackeletro/index.html
+++ b/fullstackeletro/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -6,12 +6,13 @@
     <title>Full Stack Eletro</title>
 </head>
 <body>
-    <h2>Seja bem Vindo(a)!</h2>
+    <h2 style="font-family: Arial, Helvetica, sans-serif;">Seja bem Vindo(a)!</h2>
     <p>Aqui em nossa loja,<strong> programadores tem desconto</strong> nos produtos para a sua casa!</p>
     <a href="index.html">Página inicial</a>
     <a href="produtos.html">Produtos</a>
     <a href="loja.html">Nossas Lojas</a>
     <a href="contato.html">Contato</a>
-    <h4>Formas de pagamento</h4>
+    <h4 style="font-family: Arial, Helvetica, sans-serif;color: rgb(183, 19, 19);">Formas de pagamento</h4>
+    <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
 </body>
-</html>
+</html>-->
