--- a/fullstackeletro/produtos.html
+++ b/fullstackeletro/produtos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -12,5 +12,7 @@
     <a href="loja.html">Nossas Lojas</a>
     <a href="contato.html">Contato</a>
     <hr>
+    <h4>Formas de pagamento</h4>
+    <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
 </body>
-</html>
+</html>-->
