--- a/fullstackeletro/loja.html
+++ b/fullstackeletro/loja.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -15,4 +15,4 @@
     <h4>Formas de pagamento</h4>
     <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
 </body>
-</html>
+</html>-->
