--- a/fullstackeletro/contato.html
+++ b/fullstackeletro/contato.html
@@ -6,11 +6,17 @@
     <title>Contato - Full Stack Eletro</title>
 </head>
 <body>
+     
+     <table style="background-color: #ff3131; width: 100%;">
+        <tr>
+            <td style="text-align: center; width: 25%;"><a href="index.html" style="color: white;"><img width="100px" src="imagens/logo.png" alt="Full Stack Eletro"></a></td>
+            <td  style="text-align: center; width: 25%;"><a href="produtos.html" style="color: white;">Produtos</a></td>
+            <td style="text-align: center; width: 25%;"><a href="loja.html" style="color: white;">Nossas Lojas</a></td>
+            <td  style="text-align: center; width: 25%;"><a href="contato.html" style="color: white;">Contato</a></td>
+        </tr>
+    </table>
+    
     <h2>Contato</h2>
-    <a href="index.html">Página inicial</a>
-    <a href="produtos.html">Produtos</a>
-    <a href="loja.html">Nossas lojas</a>
-    <a href="contato.html">Contato</a>
     <hr>
     <h4>Formas de pagamento</h4>
     <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
