--- a/fullstackeletro/produtos.html
+++ b/fullstackeletro/produtos.html
@@ -6,12 +6,80 @@
     <title>Produtos - Full Stack Eletro</title>
 </head>
 <body>
+     
+     <table style="background-color: #ff3131; width: 100%;">
+        <tr>
+            <td style="text-align: center; width: 25%;"><a href="index.html" style="color: white;"><img width="100px" src="imagens/logo.png" alt="Full Stack Eletro"></a></td>
+            <td  style="text-align: center; width: 25%;"><a href="produtos.html" style="color: white;">Produtos</a></td>
+            <td style="text-align: center; width: 25%;"><a href="loja.html" style="color: white;">Nossas Lojas</a></td>
+            <td  style="text-align: center; width: 25%;"><a href="contato.html" style="color: white;">Contato</a></td>
+        </tr>
+    </table>
+    
     <h2>Produtos</h2>
-    <a href="index.html">Página inicial</a>
-    <a href="produtos.html">Produtos</a>
-    <a href="loja.html">Nossas Lojas</a>
-    <a href="contato.html">Contato</a>
     <hr>
+    <table border="0" width="100%" cellpadding=>
+        <tr>
+            <td rowspan="5" width="20%" valing="top">
+                <h3><font face="Arial">Categorias</font></h3>
+                <ul>
+                    <li><font>Geladeiras (3)</font></li>
+                    <li><font>Fogões (2)</font></li>
+                    <li><font>Microondas (3)</font></li>
+                    <li><font>Máquina de lavar (2)</font></li>
+                    <li><font>Lava-louças (2)</font></li>
+                </ul>
+            </td>
+            <td width="20%" align="center" valign="bottom">
+                <img src="imagens/geladeira_branca.png" width="120px">
+                <br>
+                <font face="Arial" size="2">Geladeira/Refrigerador Electrolux 240L RE31 Branco</font>
+                <hr>
+                <font face="Arial" size="2"><strike>R$2.599,00</strike></font><br>
+                <font face="Arial" size="4" color="red">R$1.973,06</font><br>
+            </td>
+            <td width="20%" align="center" valign="bottom">
+                <img src="imagens/geladeira_uma_porta.png" width="120px"> 
+                <br>
+                <font face="Arial" size="2">Geladeira Brastemp Frost Free Duplex 375L Inox</font>
+                <hr>
+                <font face="Arial" size="2"><strike>R$4.270,00</strike></font><br>
+                <font face="Arial" size="4" color="red">R$3.148,06</font><br>
+            </td>
+            <td width="20%" align="center" valign="bottom">
+                <img src="imagens/geladeira_duas_portas.png" width="120px"> 
+                <br>
+                <font face="Arial" size="2">Geladeira/Refrigerador Brastemp Frost Free French Door 554L</font>
+                <hr>
+                <font face="Arial" size="2"><strike>R$4.270,00</strike></font><br>
+                <font face="Arial" size="4" color="red">R$3.148,06</font><br>
+            </td>
+            <td width="20%" align="center" valign="bottom">
+                <img src="imagens/fogao_branco.png" width="120px"> 
+                <br>
+                <font face="Arial" size="2">Fogão 4 Bocas Esmaltec Ágata Acendimento Automático Branco</font>
+                <hr>
+                <font face="Arial" size="2"><strike>R$896,00</strike></font><br>
+                <font face="Arial" size="4" color="red" >R$701,10</font><br>
+            </td>
+            <td width="20%" align="center" valign="bottom">
+                <img src="imagens/fogao_preto.png" width="120px">
+                <br>
+                <font face="Arial" size="2">Fogão 4 Bocas Esmaltec Preto - Acendimento Automático Caribe</font>
+                <hr>
+                <font face="Arial" size="2"><strike>R$866,01</strike></font><br>
+                <font face="Arial" size="4" color="red">R$664,05</font><br>
+            </td>
+            <td width="20%" align="center" valign="bottom">
+                <img src="imagens/lava_louça_branca.png" width="120px">
+                <br>
+                <font face="Arial" size="2">Fogão 4 Bocas Esmaltec Preto - Acendimento Automático Caribe</font>
+                <hr>
+                <font face="Arial" size="2"><strike>R$866,01</strike></font><br>
+                <font face="Arial" size="4" color="red">R$664,05</font><br>
+            </td>
+        </tr>
+    </table>
     <h4>Formas de pagamento</h4>
     <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
 </body>
