--- a/fullstackeletro/index.html
+++ b/fullstackeletro/index.html
@@ -6,14 +6,16 @@
     <title>Full Stack Eletro</title>
 </head>
 <body>
+    
     <table style="background-color: #ff3131; width: 100%;">
         <tr>
-            <td><a href="index.html" style="color: white;"><img width="100px" src="imagens/logo.png" alt="Full Stack Eletro"></a></td>
-            <td><a href="produtos.html" style="color: white;">Produtos</a></td>
-            <td><a href="loja.html" style="color: white;">Nossas Lojas</a></td>
-            <td><a href="contato.html" style="color: white;">Contato</a></td>
+            <td style="text-align: center; width: 25%;"><a href="index.html" style="color: white;"><img width="100px" src="imagens/logo.png" alt="Full Stack Eletro"></a></td>
+            <td  style="text-align: center; width: 25%;"><a href="produtos.html" style="color: white;">Produtos</a></td>
+            <td style="text-align: center; width: 25%;"><a href="loja.html" style="color: white;">Nossas Lojas</a></td>
+            <td  style="text-align: center; width: 25%;"><a href="contato.html" style="color: white;">Contato</a></td>
         </tr>
     </table>
+    
     <h2 style="font-family: Arial, Helvetica, sans-serif;">Seja bem Vindo(a)!</h2>
     <p>Aqui em nossa loja,<strong> programadores tem desconto</strong> nos produtos para a sua casa!</p>     
     <h4 style="font-family: Arial, Helvetica, sans-serif;color: rgb(183, 19, 19);">Formas de pagamento</h4>
