--- a/fullstackeletro/produtos.html
+++ b/fullstackeletro/produtos.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - Full Stack Eletro</title>
+    <style>
+        ul {
+            list-style: disc;
+        }
+
+        img {
+            display: flex;
+            justify-content: space-around;
+        }
+    </style>
 </head>
 <body>
      
@@ -18,65 +28,65 @@
     
     <h2>Produtos</h2>
     <hr>
-    <table border="0" width="100%" cellpadding=>
+    <table>
         <tr>
-            <td rowspan="5" width="20%" valing="top">
-                <h3><font face="Arial">Categorias</font></h3>
+            <td>
+                <h3>Categorias</h3>
                 <ul>
-                    <li><font>Geladeiras (3)</font></li>
-                    <li><font>Fogões (2)</font></li>
-                    <li><font>Microondas (3)</font></li>
-                    <li><font>Máquina de lavar (2)</font></li>
-                    <li><font>Lava-louças (2)</font></li>
+                    <li>Geladeiras (3)</li>
+                    <li>Fogões (2)</li>
+                    <li>Microondas (3)</li>
+                    <li>Máquina de lavar (2)</li>
+                    <li>Lava-louças (2)</li>
                 </ul>
             </td>
-            <td width="20%" align="center" valign="bottom">
+            <td>
                 <img src="imagens/geladeira_branca.png" width="120px">
                 <br>
-                <font face="Arial" size="2">Geladeira/Refrigerador Electrolux 240L RE31 Branco</font>
+                <p>Geladeira/Refrigerador Electrolux 240L RE31 Branco</p>
                 <hr>
-                <font face="Arial" size="2"><strike>R$2.599,00</strike></font><br>
-                <font face="Arial" size="4" color="red">R$1.973,06</font><br>
+                <s>R$2.599,00</s><br>
+                <h3>R$1.973,06</h3><br>
             </td>
-            <td width="20%" align="center" valign="bottom">
+            <td>
                 <img src="imagens/geladeira_uma_porta.png" width="120px"> 
                 <br>
-                <font face="Arial" size="2">Geladeira Brastemp Frost Free Duplex 375L Inox</font>
+                <p>Geladeira Brastemp Frost Free Duplex 375L Inox</p>
                 <hr>
-                <font face="Arial" size="2"><strike>R$4.270,00</strike></font><br>
-                <font face="Arial" size="4" color="red">R$3.148,06</font><br>
+                <s>R$4.270,00</s><br>
+                <h3>R$3.148,06</h3><br>
             </td>
-            <td width="20%" align="center" valign="bottom">
+            <td>
                 <img src="imagens/geladeira_duas_portas.png" width="120px"> 
                 <br>
-                <font face="Arial" size="2">Geladeira/Refrigerador Brastemp Frost Free French Door 554L</font>
+                <p>Geladeira/Refrigerador Brastemp Frost Free French Door 554L</p>
                 <hr>
-                <font face="Arial" size="2"><strike>R$4.270,00</strike></font><br>
-                <font face="Arial" size="4" color="red">R$3.148,06</font><br>
+                <s>R$4.270,00</s><br>
+                <h3>R$3.148,06</h3><br>
             </td>
-            <td width="20%" align="center" valign="bottom">
+            <td>
                 <img src="imagens/fogao_branco.png" width="120px"> 
                 <br>
-                <font face="Arial" size="2">Fogão 4 Bocas Esmaltec Ágata Acendimento Automático Branco</font>
+                <p>Fogão 4 Bocas Esmaltec Ágata Acendimento Automático Branco</p>
                 <hr>
-                <font face="Arial" size="2"><strike>R$896,00</strike></font><br>
-                <font face="Arial" size="4" color="red" >R$701,10</font><br>
+                <s>R$896,00</s><br>
+                <h3>R$701,10</h3><br>
             </td>
-            <td width="20%" align="center" valign="bottom">
+            <td>
                 <img src="imagens/fogao_preto.png" width="120px">
                 <br>
-                <font face="Arial" size="2">Fogão 4 Bocas Esmaltec Preto - Acendimento Automático Caribe</font>
+                <p>Fogão 4 Bocas Esmaltec Preto - Acendimento Automático Caribe</p>
                 <hr>
-                <font face="Arial" size="2"><strike>R$866,01</strike></font><br>
-                <font face="Arial" size="4" color="red">R$664,05</font><br>
+                <s>R$866,01</s><br>
+                <h3>R$664,05</h3><br>
             </td>
-            <td width="20%" align="center" valign="bottom">
+            <td>
                 <img src="imagens/lava_louça_branca.png" width="120px">
                 <br>
-                <font face="Arial" size="2">Fogão 4 Bocas Esmaltec Preto - Acendimento Automático Caribe</font>
+                <p>Fogão 4 Bocas Esmaltec Preto - Acendimento Automático Caribe</p>
                 <hr>
-                <font face="Arial" size="2"><strike>R$866,01</strike></font><br>
-                <font face="Arial" size="4" color="red">R$664,05</font><br>
+                <s>R$866,01</s><br>
+                <h3>R$664,05</h3><br>
             </td>
         </tr>
     </table>
