--- a/fullstackeletro/index.html
+++ b/fullstackeletro/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Stack Eletro</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     
@@ -16,9 +17,9 @@
         </tr>
     </table>
     
-    <h2 style="font-family: Arial, Helvetica, sans-serif;">Seja bem Vindo(a)!</h2>
-    <p>Aqui em nossa loja,<strong> programadores tem desconto</strong> nos produtos para a sua casa!</p>     
-    <h4 style="font-family: Arial, Helvetica, sans-serif;color: rgb(183, 19, 19);">Formas de pagamento</h4>
+    <h2>Seja bem Vindo(a)!</h2>
+    <p>Aqui em nossa loja, programadores tem desconto nos produtos para a sua casa!</p>    
+    <h4>Formas de pagamento</h4>
     <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
 </body>
 </html>-->
