--- a/fullstackeletro/produtos.html
+++ b/fullstackeletro/produtos.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - Full Stack Eletro</title>
-    <style>
-        ul {
-            list-style: disc;
-        }
-
-        img {
-            display: flex;
-            justify-content: space-around;
-        }
-    </style>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
      
