--- a/fullstackeletro/index.html
+++ b/fullstackeletro/index.html
@@ -7,19 +7,22 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+    <nav class="menu">
+        <a href="index.html"><img src="imagens/logo200x200.png" alt="Full Stack Eletro"></a>
+        <a href="produtos.html">Produtos</a>
+        <a href="loja.html">Nossas Lojas</a>
+        <a href="contato.html">Contato</a>
+    </nav>
     
-    <table style="background-color: #ff3131; width: 100%;">
-        <tr>
-            <td style="text-align: center; width: 25%;"><a href="index.html" style="color: white;"><img width="100px" src="imagens/logo.png" alt="Full Stack Eletro"></a></td>
-            <td  style="text-align: center; width: 25%;"><a href="produtos.html" style="color: white;">Produtos</a></td>
-            <td style="text-align: center; width: 25%;"><a href="loja.html" style="color: white;">Nossas Lojas</a></td>
-            <td  style="text-align: center; width: 25%;"><a href="contato.html" style="color: white;">Contato</a></td>
-        </tr>
-    </table>
+    <main>
+        <h1>Seja bem Vindo(a)!</h1>
+        <p>Aqui em nossa loja, programadores tem desconto nos produtos para a sua casa!</p>
+    </main>     
     
-    <h2>Seja bem Vindo(a)!</h2>
-    <p>Aqui em nossa loja, programadores tem desconto nos produtos para a sua casa!</p>    
-    <h4>Formas de pagamento</h4>
-    <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
+    <footer id="rodape">
+         <p id="formas_pagamento">Formas de pagamento</p>
+         <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
+        <p>&copy; JMG</p>
+    </footer>
 </body>
 </html>-->
