criei a página início

--- a/fullstackeletro/index.html
+++ b/fullstackeletro/index.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <nav class="menu">
+    <header class="cabecalho">
         <a href="index.html"><img src="imagens/logo200x200.png" alt="Full Stack Eletro"></a>
+    </header>
+
+    <nav class="menu">
+        <a href="index.html">Início</a>
         <a href="produtos.html">Produtos</a>
         <a href="loja.html">Nossas Lojas</a>
         <a href="contato.html">Contato</a>
@@ -25,4 +29,4 @@
         <p>&copy; JMG</p>
     </footer>
 </body>
-</html>-->
+</html>
