--- a/fullstackeletro/produtos.html
+++ b/fullstackeletro/produtos.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+
+    <header class="cabecalho">
+     <a href="index.html"><img src="imagens/logo200x200.png" alt="Full Stack Eletro"></a>
+    </header>
      
-    <nav id="menu">
-        <a href="index.html"><img src="imagens/logo200x200.png" alt="Full Stack Eletro"></a>
+    <nav class="menu">
+        <a href="index.html">Início</a>
         <a href="produtos.html">Produtos</a>
         <a href="loja.html">Nossas Lojas</a>
         <a href="contato.html">Contato</a>
@@ -82,9 +86,12 @@
             </td>
         </tr>
     </table>
-    <h4 id="formas_pagamento">Formas de pagamento</h4>
-    <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
+    
 
-    <footer id="rodape">&copy; JMG</footer>
+    <footer>
+         <p id="formas_pagamento">Formas de pagamento</p>
+         <img src="imagens/forma_de_pagamento.png" alt="Formas de pagamento">
+         <p>&copy;JMG</p>
+    </footer>
 </body>
-</html>-->
+</html>
