--- a/fullstackeletro/inicio.html
+++ b/fullstackeletro/inicio.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Stack Eletro</title>
+    <title>Inovare Nutição</title>
+    <link rel="shortcut icon" href="imagens/five-icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <header class="cabecalho">
-        <a href="index.html"><img src="imagens/logo200x200.png" alt="Full Stack Eletro"></a>
+        <a href="index.html"><img src="imagens/logo-nutri-400-84.jpg" alt="Inovare Nutrição"></a>
     </header>
     
     <nav class="menu">
@@ -29,4 +30,4 @@
          <p>&copy; JMG</p>
     </footer>
 </body>
-</html>
+</html>-->
