--- a/fullstackeletro/inicio.html
+++ b/fullstackeletro/inicio.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -30,4 +30,4 @@
          <p>&copy; JMG</p>
     </footer>
 </body>
-</html>-->
+</html>
