--- a/fullstackeletro/loja.html
+++ b/fullstackeletro/loja.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -29,4 +29,4 @@
          <p>&copy; JMG</p>
     </footer>
 </body>
-</html>-->
+</html>
