--- a/fullstackeletro/loja.html
+++ b/fullstackeletro/loja.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -14,13 +14,16 @@
 
     <nav class="menu">
         <a href="index.html">Início</a>
+        <a href="sobrenos.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="loja.html">Nossas Lojas</a>
         <a href="contato.html">Contato</a>
     </nav>
     
-    <h2>Nossas Lojas</h2>
-    <hr>
+    <main>
+        <h2>Nossas Lojas</h2>
+        <hr>
+    </main>
     
 
     <footer id="rodape">
@@ -29,4 +32,4 @@
          <p>&copy; JMG</p>
     </footer>
 </body>
-</html>
+</html>-->
