--- a/fullstackeletro/inicio.html
+++ b/fullstackeletro/inicio.html
@@ -14,6 +14,7 @@
     
     <nav class="menu">
         <a href="index.html">Início</a>
+        <a href="sobrenos.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="loja.html">Nossas Lojas</a>
         <a href="contato.html">Contato</a>
