--- a/fullstackeletro/produtos.html
+++ b/fullstackeletro/produtos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +15,7 @@
      
     <nav class="menu">
         <a href="index.html">Início</a>
+        <a href="sobrenos.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="loja.html">Nossas Lojas</a>
         <a href="contato.html">Contato</a>
@@ -107,4 +108,4 @@
          <p>&copy;JMG</p>
     </footer>
 </body>
-</html>
+</html>-->
